--- a/sorokin_test/media/css/index.css
+++ b/sorokin_test/media/css/index.css
@@ -22,6 +22,18 @@ html, body {
       margin: 10px 0; }
     #content ul ul {
       padding-left: 20px; }
+  #content .header {
+    display: block;
+    width: 100%;
+    line-height: 30px; }
+    #content .header h2 {
+      float: left;
+      margin: 0; }
+    #content .header span {
+      float: right; }
+
+.clear {
+  clear: both; }
 
 .left {
   float: left; }
