--- a/sorokin_test/media/css/index.css
+++ b/sorokin_test/media/css/index.css
@@ -31,6 +31,9 @@ html, body {
       margin: 0; }
     #content .header span {
       float: right; }
+  #content .footer {
+    clear: both;
+    width: 100%; }
 
 .clear {
   clear: both; }
