ticket:5 add view, layout, test

--- a/sorokin_test/templates/base.html
+++ b/sorokin_test/templates/base.html
@@ -18,7 +18,9 @@
 	    	{% block content %}
 	    	{% endblock %}
 	    	<div class='footer'>
-	    		<a href='{% url requests %}'>requests</a> <a href='{% url person_detail %}'>home</a>	
+	    		<a href='{% url requests %}'>requests</a>
+	    		<a href='{% url person_detail %}'>home</a>
+	    		<a href='{% url person_edit %}'>Edit</a>	
 	    	</div>
     	</div>
     </body>
