--- a/sorokin_test/media/css/index.css
+++ b/sorokin_test/media/css/index.css
@@ -10,13 +10,26 @@ html, body {
 #content {
   width: 800px;
   margin: 0 auto; }
+  #content table {
+    width: 355px; }
+    #content table textarea {
+      margin: 0px;
+      background-color: #F5F0F5;
+      border: 1px solid #999;
+      width: 242px;
+      height: 112px; }
+    #content table input {
+      background-color: #F5F0F5;
+      border: 1px solid #999;
+      width: 200px;
+      height: 14px; }
   #content ul {
     font-size: 14px;
     line-height: 18px;
     padding: 0;
     margin: 0;
     list-style: none;
-    width: 300px;
+    width: 360px;
     margin-right: 20px; }
     #content ul li {
       margin: 10px 0; }
