--- a/sorokin_test/templates/contact/person_form.html
+++ b/sorokin_test/templates/contact/person_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-	<form method='post'>{% csrf_token %}
+	<form method='post' id='perso_edit_form'>{% csrf_token %}
 		<table class='left'>
 				{% for field in form %}
 					<tr>
