--- a/sorokin_test/media/css/index.css
+++ b/sorokin_test/media/css/index.css
@@ -8,7 +8,7 @@ html, body {
     font-weight: normal; }
 
 #perso_edit_form table {
-  width: 355px; }
+  width: 320px; }
   #perso_edit_form table textarea {
     margin: 0px;
     background-color: #F5F0F5;
@@ -20,6 +20,11 @@ html, body {
     border: 1px solid #999;
     width: 200px;
     height: 14px; }
+#perso_edit_form .errorlist {
+  padding: 0; }
+  #perso_edit_form .errorlist li {
+    margin: 0;
+    color: red; }
 
 #content {
   width: 800px;
