add ajax adn date picker

--- a/sorokin_test/templates/base.html
+++ b/sorokin_test/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">    <head>
         <title>{% block title %}{% endblock %}</title>
-        <link href="{{ MEDIA_URL }}css/index.css" type="text/css" media="all" rel="stylesheet">
+        <link href="{{ STATIC_URL }}css/index.css" type="text/css" media="all" rel="stylesheet">
         {% block extrahead %}{% endblock %}
     </head>
     <body>
