--- a/sorokin_test/templates/core/requeststore_list.html
+++ b/sorokin_test/templates/core/requeststore_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-	<table border=1>
+	<table class='requests'>
 		<tr>
 			<td>Status</td>
 			<td>Url</td>
