--- a/sorokin_test/templates/contact/person_form.html
+++ b/sorokin_test/templates/contact/person_form.html
@@ -1,26 +1,16 @@
 {% extends 'base.html' %}
-
+{% block extrahead %}
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+	<script type="text/javascript" src="http://malsup.github.com/jquery.form.js"></script>
+	{{ form.media }}
+{% endblock %}
 {% block content %}
-	<form method='post' id='perso_edit_form'>{% csrf_token %}
-		<table class='left'>
-				{% for field in form %}
-					
-					<tr>
-						<th>{{ field.label }}:</th>
-						<td>
-							{% if field.errors %}
-								{{ field.errors }}
-							{% endif %}
-							{{ field }}
-						</td>
-					<tr>
-					{% if forloop.counter|divisibleby:"4" %}
-						</table><table class='left'>
-					{% endif %}
-				{% endfor %}
-		</table>
+	<form method='post' id='perso_edit_form' data-success-url='{% url person_detail %}'>
+		<div class='form_content'>
+			{% include 'contact/form_content.html' %}
+		</div>
 		<div class='clear'>
-			<input type='submit' value='save'>
+			<input type='submit' value='save'><span class='wait'>Processing...</span>
 		</div>
 	</form>
 {% endblock %}
