--- a/sorokin_test/templates/contact/form_content.html
+++ b/sorokin_test/templates/contact/form_content.html
@@ -1,6 +1,6 @@
 {% csrf_token %}
 <table class='left'>
-		{% for field in form %}
+		{% for field in form reversed %}
 			
 			<tr>
 				<th>{{ field.label }}:</th>
