ticket:13 add ordering on requests page

--- a/sorokin_test/templates/core/requeststore_list.html
+++ b/sorokin_test/templates/core/requeststore_list.html
@@ -4,6 +4,7 @@
 {% block content %}
 	<table class='requests'>
 		<tr>
+			<td><a href='?{{ order.links.priority }}'> Priority</a></td>
 			<td>Status</td>
 			<td>Url</td>
 			<td>Date</td>
@@ -14,6 +15,7 @@
 		</tr>
 		{% for req in object_list %}
 			<tr>
+				<td>{{ req.priority }}</td>
 				<td>{{ req.req_status_code }}</td>
 				<td>{{ req.url }} </td>
 				<td>{{ req.created }}</td>
