--- a/sorokin_test/media/css/index.css
+++ b/sorokin_test/media/css/index.css
@@ -62,6 +62,8 @@ html, body {
     border: 1px solid black; }
     #content .requests td {
       border: 1px solid black; }
+    #content .requests .ajax_status {
+      width: 20px; }
 
 .clear {
   clear: both; }
@@ -71,3 +73,6 @@ html, body {
 
 .right {
   float: right; }
+
+.hidden {
+  display: none; }
